# PubMed_Central_ID_Converter_for_humans

./: LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt
binder/: requirements.txt
notebooks/: jupyterlite_demo.ipynb
src/PMC_ID_Converter_for_humans/: __init__.py  core.py
tests/: conftest.py  test_Converter.py  test_PubMed_Central_ID_Converter_for_humans.py  test_the_package.ipynb
