[project]
name = "PMC-ID-Converter-for-humans"
version = "0.1.0"
description = "Simple library for using the PubMed Central ID Convert API for dealing biomedical and scientific literature."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
